Adds external ColonyNetworks tests.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,6 +122,20 @@ jobs:
           command: |
             test/externalTests/zeppelin.sh /tmp/workspace/soljson.js || test/externalTests/zeppelin.sh /tmp/workspace/soljson.js
 
+  test_emscripten_external_colony:
+    docker:
+      - image: circleci/node:10
+    environment:
+      TERM: xterm
+    steps:
+      - checkout
+      - attach_workspace:
+          at: /tmp/workspace
+      - run:
+          name: External ColonyNetworks tests
+          command: |
+            test/externalTests/colony.sh /tmp/workspace/soljson.js || test/externalTests/colony.sh /tmp/workspace/soljson.js
+
   build_x86_linux:
     docker:
       - image: buildpack-deps:bionic
@@ -435,6 +449,10 @@ workflows:
           <<: *build_on_tags
           requires:
             - build_emscripten
+      - test_emscripten_external_colony:
+          <<: *build_on_tags
+          requires:
+            - build_emscripten
       - build_x86_linux: *build_on_tags
       - build_x86_linux_cxx17: *build_on_tags
       - build_x86_clang7_asan: *build_on_tags
@@ -479,3 +497,8 @@ workflows:
           <<: *build_on_tags
           requires:
             - build_emscripten
+      - test_emscripten_external_colony:
+          <<: *build_on_tags
+          requires:
+            - build_emscripten
+
